Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55278

crashes when adding series fast

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.2
    • 5.7.0
    • Charts
    • None
    • 5820e450ad79f71f1ff0e12ec9cf06371288ea44

    Description

          if ( m_view_cur->type==QAbstractSeries::SeriesTypeBoxPlot) {
              auto series_t = m_view_cur->chart()->series().count();
              if ( series_count == series_t) {
                  return;
              }
      
              // append
              if (series_count > series_t) {
                  for(int i = 0 ; i < series_count-series_t; ++i) {
                      QList<int> list_x={0,1,2,3,4};
                      QBoxPlotSeries * ser = new QBoxPlotSeries;
                      foreach(auto x, list_x) {
                          QBoxSet * bs = new QBoxSet;
                          QList<qreal> set;
                          for(int j = 0 ; j < 5; ++j ) {
                              set.append(RANDOM_VAL);
                          }
                          std::sort(set.begin(), set.end());
                          bs->append(set);
                          bs->setLabel(QString::number(x));
                          ser->append(bs);
                      }
                      m_view_cur->chart()->addSeries(ser);
      
      
                      if (m_view_cur->chart()->axes().isEmpty()) {
                          m_view_cur->chart()->createDefaultAxes();
                      }
                     else{
                                ser->attachAxis(m_view_cur->chart()->axisX());
                              ser->attachAxis(m_view_cur->chart()->axisY());
                     }
                  }
              }
              // delete
              else{
                  for(int  i = 0 ; i < series_t-series_count; ++i) {
                      m_view_cur->chart()->removeSeries(m_view_cur->chart()->series().last());
                  }
              }
      

      Attachments

        For Gerrit Dashboard: QTBUG-55278
        # Subject Branch Project Status CR V

        Activity

          People

            e0348803 Miikka Heikkinen
            cc.dreamer@hotmail.com Corey Chan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes