Disconnect boxplot series from chart's dataset correctly

When a boxplot series is removed from the chart, it must disconnect
from chart's dataset. However, it only did it when animations were
enabled.

Task-number: QTBUG-55278
Change-Id: Iad89a586d16dc32299ae71aa63b3beccb4d51fdd
Reviewed-by: Mika Salmela <mika.salmela@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>